# dotfiles

./: .gitignore  .gitmodules  .luacheckrc  .luarc.json  .prettierignore  .prettierrc.json  AGENTS.md  README.md  install.sh  mise.toml  prettier.config.mjs  readme.md  setup.sh  tsconfig.base.json  tsconfig.json
dotfiles/: .gitconfig  .phoenix.debug.js  .phoenix.js  .skhdrc  .ssh-config  .starship.toml  .wezterm.lua  .yabairc  .zshrc  com.googlecode.iterm2.plist
dotfiles/.config/: topgrade.toml
dotfiles/.config/aerospace/: aerospace.toml
dotfiles/.config/bat/: batconfig
dotfiles/.config/borders/: bordersrc
dotfiles/.config/custom/: chadrc.lua  init.lua  mappings.lua  plugins.lua
dotfiles/.config/fastfetch/: config.jsonc
dotfiles/.config/fm/: config.yml
dotfiles/.config/gh/: config.yml
dotfiles/.config/gh-copilot/: config.yml
dotfiles/.config/ghostty/: config
dotfiles/.config/hammerspoon/: .luarc.json  init.lua  luarocks.lua  setup.lua
dotfiles/.config/kitty/: fonts.conf  keyboard.conf  kitty.conf  kitty.session  style.conf  tabs.conf
dotfiles/.config/skhd/: skhdrc
dotfiles/.sheldon/: plugins.toml
dotfiles/.zsh/: utils.sh
dotfiles/kitty/: fonts.conf  kitty.session  performance.conf  tabs.conf
dotfiles/macchina/: macchina.toml
dots/: .alacritty.yml  .gitconfig  .hyper.js  .phoenix.debug.js  .phoenix.js  .starship.toml  .vuerc  .yabairc  .zsh_aliases  .zsh_functions  .zsh_plugins  .zshrc  autoexec.cmd  autoexec.sh  com.googlecode.iterm2.plist  prettier.config.js  syntax-theme.ini
dots/.hammerspoon/: .hammerspoon  init.lua
dots/phoenix/: package.json  tsconfig.json  webpack.base.js  webpack.dev.js  webpack.prod.js
home/: .editorconfig  .gitconfig  .gitignore  .ssh-config  .zprofile  .zshrc  Brewfile
home/.agents/: .skill-lock.json
home/.claude/: CLAUDE.md  settings.json
home/.codex/: config.toml
home/.config/: cspell.json  topgrade.toml
home/.config/sketchybar-bottom/weather/scripts/: Cargo.toml  makefile
home/.config/sketchybar-bottom/weather/scripts/src/: main.rs  weather-watcher.plist
home/.config/sketchybar-top/media/scripts/: Cargo.toml  makefile
home/.config/sketchybar-top/media/scripts/src/: main.rs  media-watcher.plist
home/.config/sketchybar-top/menubar/scripts/: Cargo.toml  makefile  menubar-watcher.plist
home/.config/sketchybar-top/menubar/scripts/src/: menu-list.rs  menubar-watcher.rs
home/.config/sketchybar/apps/: Cargo.toml  build.rs
home/.config/sketchybar/apps/.cargo/: config.toml
home/.config/sketchybar/apps/src/: app-menu.rs  battery-watcher.rs  clock-watcher.rs  cpu-watcher.rs  dock-reader.rs  dock.rs  media-watcher.rs  menubar-watcher.rs  weather-watcher.rs  weather.rs
home/.config/zellij/source/statusbar/: Cargo.toml  README.md  build.sh
home/.config/zellij/source/statusbar/src/: color.rs  datetime.rs  frames.rs  indicator.rs  main.rs  session.rs  tabs.rs  view.rs
installation/: apps.sh  bin.sh  brew.sh  go.sh  lua.sh  macos.sh  node.sh  packages.sh  postinstall.sh  preinstall.sh  python.sh  ruby.sh  rust.sh  symlinks.sh  zsh.sh
installation/core/: brew.sh  macos.sh  postinstall.sh  preinstall.sh  symlinks.sh
installation/lib/: utils.sh
installation/linux/: install.sh  pacman.sh  update.sh  user.sh  yay.sh
installation/macos/: brew.sh  install.sh  osx.sh  update.sh
installation/modules/: brew.sh  lua.sh  node.sh  python.sh  ruby.sh  rust.sh  vscode.sh  zsh.sh
scripts/: apps.sh  brew.sh  cask.sh  development.sh  macos.sh  node.sh  postinstall.sh  preinstall.sh  ruby.sh  symlinks.sh  update.sh  update.zsh  zsh.sh
static/: Keychron Q65 Layout.json
tools/opencode-launcher/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
tools/vscode-agent-terminal/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
(+526 files in other folders)
