[package]
name = "sketchybar_scripts"
version = "0.1.0"
edition = "2024"
description = "SketchyBar scripts for macOS menu bar customization"
license = "MIT"
repository = "https://github.com/marcosmoura/dotfiles"
readme = "README.md"
keywords = ["sketchybar", "macos", "menubar", "scripts", "automation"]
categories = ["command-line-utilities", "gui"]

[dependencies]
base64 = "0.22.1"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
image = "0.25.8"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-core-location = "0.3.1"
objc2-foundation = "0.3.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
smallvec = "1.15.1"
tokio = { version = "1.47.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
urlencoding = "2.1.3"

[[bin]]
name = "weather-watcher"
path = "src/weather.rs"

[[bin]]
name = "media-watcher"
path = "src/media.rs"

[[bin]]
name = "app-menu"
path = "src/app-menu.rs"

[[bin]]
name = "menubar-watcher"
path = "src/menubar-watcher.rs"

[[bin]]
name = "dock-reader"
path = "src/dock.rs"
