[package]
name = "sketchybar_weather"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
dotenvy = "0.15.7"
objc2 = "0.6.2"
objc2-core-location = "0.3.1"
objc2-foundation = "0.3.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"

[package.metadata]
default-run = "weather-watcher"

[[bin]]
name = "weather-watcher"
path = "src/main.rs"
