[package]
name = "sketchybar-media-control"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
image = "0.25.8"

[package.metadata]
default-run = "media-watcher"

[[bin]]
name = "media-watcher"
path = "src/main.rs"
