[package]
name = "sketchybar-media-control"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
image = "0.25.8"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

[package.metadata]
default-run = "media-watcher"

[[bin]]
name = "media-watcher"
path = "src/main.rs"
