[package]
name = "menubar-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
core-graphics = "0.25.0"
libc = "0.2.175"
objc = "0.2.7"

[[bin]]
name = "menu-list"
path = "src/menu-list.rs"

[[bin]]
name = "menubar-watcher"
path = "src/menubar-watcher.rs"
