[package]
name = "zellij-statusbar"
version = "0.2.0"
authors = ["Marcos Moura <contact@marcosmoura.com>"]
edition = "2021"

[[bin]]
name = "statusbar"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.39"
chrono-tz = "0.10.1"
colored = "3.0.0"
unicode-width = "0.2.0"
zellij-tile = "0.41.2"
zellij-tile-utils = "0.41.2"
